--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/vue": "^1.7.16",
     "@tanstack/vue-table": "^8.9.3",
     "axios": "^1.5.0",
+    "pinia": "^2.1.6",
     "vee-validate": "^4.11.3",
     "vue": "^3.3.4",
     "vue-query": "^1.26.0",
@@ -31,9 +32,10 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-vue": "^9.16.1",
+    "eslint-plugin-vue": "^9.17.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "sass": "^1.66.1",
