--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
     "@tanstack/vue-table": "^8.9.3",
+    "@vuepic/vue-datepicker": "^6.1.0",
     "axios": "^1.5.0",
     "pinia": "^2.1.6",
     "vee-validate": "^4.11.3",
