--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
     "@tanstack/vue-table": "^8.9.3",
+    "@types/lodash": "^4.14.198",
     "@vuepic/vue-datepicker": "^6.1.0",
     "axios": "^1.5.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.6",
     "vee-validate": "^4.11.3",
     "vue": "^3.3.4",
