--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^3.3.4",
     "vue-query": "^1.26.0",
     "vue-router": "^4.2.4",
+    "vue-spinner": "^1.0.4",
     "vue-toastification": "^2.0.0-rc.5",
     "yup": "^1.2.0"
   },
