--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
+        "@headlessui-float/vue": "^0.11.3",
         "@headlessui/vue": "^1.7.16",
         "@tanstack/vue-table": "^8.9.3",
         "@types/lodash": "^4.14.198",
