--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "files": [],
-
     "references": [
         {
             "path": "./tsconfig.node.json"
@@ -12,7 +11,11 @@
     "compilerOptions": {
         "target": "ESNext",
         "types": ["vite/client"],
-        "module": "ESNext"
+        "module": "ESNext",
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"]
+        }
     },
     "include": [
         "src/**/*.ts",
