--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/lodash": "^4.14.198",
         "@vuepic/vue-datepicker": "^6.1.0",
         "axios": "^1.5.0",
+        "floating-vue": "^2.0.0-beta.24",
         "lodash": "^4.17.21",
         "pinia": "^2.1.6",
         "vee-validate": "^4.11.3",
