--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@tanstack/vue-table": "^8.9.3",
         "@types/lodash": "^4.14.198",
         "@vuepic/vue-datepicker": "^6.1.0",
+        "@vueuse/core": "^10.6.0",
         "axios": "^1.5.0",
         "floating-vue": "^2.0.0-beta.24",
         "lodash": "^4.17.21",
