--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
-        "@headlessui-float/vue": "^0.11.3",
-        "@headlessui/vue": "^0.0.0-insiders.bfacb64",
+        "@headlessui-float/vue": "^0.14.0",
+        "@headlessui/vue": "^1.7.22",
         "@tanstack/vue-table": "^8.9.3",
         "@types/lodash": "^4.14.198",
         "@vuepic/vue-datepicker": "^6.1.0",
