--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "vue-router": "^4.2.4",
         "vue-spinner": "^1.0.4",
         "vue-toastification": "^2.0.0-rc.5",
+        "xlsx": "^0.18.5",
         "yup": "^1.2.0"
     },
     "devDependencies": {
